@@ -11,6 +11,7 @@ PbootCMS V1.3.7 build 2019-03-12
 4、修复分享非默认语言链接后无法直接访问问题；
 5、新增跨语言调用内容及列表的支持；
 6、新增留言使用lg=*调取指定语言留言记录功能；
+7、新增order=random调取随机排序内容列表；
 
 PbootCMS V1.3.6 build 2019-01-12
 1、框架问题修复与优化;
